--- a/package.json
+++ b/package.json
@@ -173,7 +173,7 @@
     "moment": "^2.24.0",
     "opencollective-postinstall": "~2.0.1",
     "path-to-regexp": "^3.0.0",
-    "pdfjs-dist": "https://github.com/burtonator/package-polar-pdfjs-dist.git",
+    "pdfjs-dist": "=2.8.250-polar.3",
     "polar-accounts": "^2.1.29",
     "polar-assets": "^2.1.29",
     "polar-backend-api": "^2.1.29",
